--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                                     <ul class="sub-menu">
                                         <li><a href="">Javascript cơ bản </a></li>
                                         <li><a href="">Javascript nâng cao</a></li>
-                                        <li><a href="">Các bài tâpj Javascript</a></li>
+                                        <li><a href="https://learningwebdesign.com/">Các bài tập Javascript</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="">Tài Liệu CSS</a></li>
