--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="header">
                 <nav class="container">
                     <a href="" id="logo">
-                        <img src="logo.png" alt="Gia huy tộc uchiha " width="90" height="90">
+                        <img src="logo.png" alt=" cái logo giả cầy  " width="90" height="90">
                     </a>
                     <ul id="main-menu">
                         <li><a href=""> Trang chủ </a></li>
